# ai

./: README.md
ai_software_renderer/: .gitignore  CMakeLists.txt  README.md
ai_software_renderer/include/: camera.h  color.h  lighting.h  matrix.h  mesh.h  pipeline.h  q2mesh.h  renderer.h  terrain.h  utils.h
ai_software_renderer/src/: camera.cpp  lighting.cpp  main.cpp  main2.cpp  main3.cpp  matrix.cpp  mesh.cpp  pipeline.cpp  q2mesh.cpp  renderer.cpp  terrain.cpp  utils.cpp
ollama_command_ai/: README.md  ollama_commands.py
ollama_head_to_head/: README.md  head_to_head_chat.py
ollama_simple_client/: ollama_simplechat.py
torch_manual_transformer/: LICENSE  README.md  data.txt  generate.py  memorizeit.py  memorizeit_ddp.py  visualize.py
